@@ -1,41 +1,169 @@
-﻿using System.Linq;
+﻿using System;
+using System.Linq;
 using UnityEngine;
 using ColossalFramework.UI;
+using System.Collections.Generic;
 
 
 namespace PloppableRICO
 {
+    public static class ThumbnailManager
+    {
+        // Instances.
+        private static GameObject gameObject;
+        private static ThumbnailQueue _queue;
+        private static UIPreviewRenderer _renderer;
+        internal static UIPreviewRenderer Renderer => _renderer;
+
+
+        /// <summary>
+        /// Queues a BuildingData instance for rendering.
+        /// </summary>
+        /// <param name="buildingData">RICO BuildingData instance</param>
+        public static void QueueThumbnail(BuildingData buildingData)
+        {
+            // Create the render if there isn't one already.
+            if (gameObject == null)
+            {
+                Create();
+            }
+
+            _queue.QueueThumbnail(buildingData);
+        }
+
+
+        /// <summary>
+        /// Creates our renderer GameObject.
+        /// </summary>
+        internal static void Create()
+        {
+            try
+            {
+                // If no instance already set, create one.
+                if (gameObject == null)
+                {
+                    // Give it a unique name for easy finding with ModTools.
+                    gameObject = new GameObject("RICOThumbnailRenderer");
+                    gameObject.transform.parent = UIView.GetAView().transform;
+
+                    // Add our queue manager and renderer directly to the gameobject.
+                    _renderer = gameObject.AddComponent<UIPreviewRenderer>();
+                    _queue = gameObject.AddComponent<ThumbnailQueue>();
+
+                    Debugging.Message("thumbnail renderer created");
+                }
+            }
+            catch (Exception e)
+            {
+                Debugging.LogException(e);
+            }
+        }
+
+
+        /// <summary>
+        /// Cleans up when finished.
+        /// </summary>
+        internal static void Close()
+        {
+            GameObject.Destroy(_queue);
+            GameObject.Destroy(_renderer);
+            GameObject.Destroy(gameObject);
+
+            Debugging.Message("thumbnail renderer destroyed");
+        }
+    }
+    
+
     /// <summary>
-    /// This class generates building preview thumbnails for the Ploppable Tool panel.
+    /// Manages a queue for rendering thumbnail images.
     /// Inspired by Boogieman Sam's FindIt! UI.
     /// </summary>
-    internal class Thumbnails
+    public class ThumbnailQueue : UIComponent
     {
         // Renderer for thumbnail images.
-        private static UIPreviewRenderer thumbnailRenderer;
+        private UIPreviewRenderer renderer;
+
+        // Render queue.
+        private List<BuildingData> renderQueue;
+
+
+        /// <summary>
+        /// Update method - we render a new thumbnail every time this is called.
+        /// Called by Unity every frame.
+        /// </summary>
+        public override void Update()
+        {
+            base.Update();
+
+            // Check to see if there's anything in the queue.
+            if (renderQueue != null && renderQueue.Count > 0)
+            {
+                // The queue is not empty - get the next (first in list) building.
+                BuildingData thisBuilding = renderQueue.First<BuildingData>();
+
+                if (Settings.debugLogging)
+                {
+                    Debugging.Message("creating thumbnails for " + thisBuilding.displayName);
+                }
+
+                // Create the thumbnail.
+                CreateThumbnail(thisBuilding);
+
+                // Thumbnail rendered - remove from queue.
+                renderQueue.Remove(thisBuilding);
+            }
+            else
+            {
+                // The queue is empty; close everything down and destroy objects.
+               ThumbnailManager.Close();
+            }
+        }
+
+
+        /// <summary>
+        /// Constructor.
+        /// </summary>
+        public ThumbnailQueue()
+        {
+            if (Settings.debugLogging)
+            {
+                Debugging.Message("creating thumbnail queue");
+            }
+
+            // Get local reference from parent.
+            renderer = ThumbnailManager.Renderer;
+
+            // Size and setting for thumbnail images: 109 x 100, doubled for anti-aliasing.
+            renderer.Size = new Vector2(109, 100) * 2f;
+            renderer.CameraRotation = 210f;
+        }
+
+
+        /// <summary>
+        /// Adds a building to the render queue; assumes building button already created.
+        /// </summary>
+        /// <param name="building">RICO BuildingData</param>
+        internal void QueueThumbnail(BuildingData building)
+        {
+            if (renderQueue == null)
+            {
+                // Initialise queue.
+                renderQueue = new List<BuildingData>();
+            }
+            renderQueue.Add(building);
+        }
 
 
         /// <summary>
         /// Generates building thumbnail images (normal, focused, hovered, pressed and disabled) for the given building prefab.
-        /// Thumbnails are applied to the m_Thumbnail and m_Atlas fields of the prefab.
+        /// Thumbnails are no longer applied to the m_Thumbnail and m_Atlas fields of the prefab, but to the BuildingData record.
         /// </summary>
         /// <param name="prefab">The BuildingInfo prefab to generate thumbnails for</param>
         /// <param name="name">The display name of the prefab.</param>
-        internal static void CreateThumbnail(BuildingData building)
+        internal void CreateThumbnail(BuildingData building)
         {
-            // Create the renderer if it hasn't already been set up.
-            if (thumbnailRenderer == null)
-            {
-                // Use a unique GameObject name to help find it with ModTools.
-                thumbnailRenderer = new GameObject("RICORevisitedThumbnailRenderer").AddComponent<UIPreviewRenderer>();
-
-                // Size and setting for thumbnail images: 109 x 100, doubled for anti-aliasing.
-                thumbnailRenderer.Size = new Vector2(109, 100) * 2f;
-                thumbnailRenderer.CameraRotation = 210f;
-            }
-
             // Reset zoom.
-            thumbnailRenderer.Zoom = 4f;
+            renderer.Zoom = 4f;
 
             // Don't do anything with null prefabs or prefabs without buttons.
             if (building == null || building.buildingButton == null)
@@ -44,21 +172,21 @@ namespace PloppableRICO
             }
 
             // Set mesh and material for render.
-            thumbnailRenderer.SetTarget(building.prefab);
+            renderer.SetTarget(building.prefab);
 
-            if (thumbnailRenderer.Mesh == null)
+            if (renderer.Mesh == null)
             {
                 // If the prefab itself has no mesh, see if there's any sub-buildings to render instead (e.g. Boston Residence Garage).
                 if (building.prefab.m_subBuildings.Count() > 0)
                 {
                     // Use first sub-building as render target; set mesh and material.
-                    thumbnailRenderer.Mesh = building.prefab.m_subBuildings[0].m_buildingInfo.m_mesh;
-                    thumbnailRenderer.material = building.prefab.m_subBuildings[0].m_buildingInfo.m_material;
+                    renderer.Mesh = building.prefab.m_subBuildings[0].m_buildingInfo.m_mesh;
+                    renderer.Material = building.prefab.m_subBuildings[0].m_buildingInfo.m_material;
                 }
             }
 
             // If we still haven't gotten a mesh after the above, then something's not right; exit.
-            if (thumbnailRenderer.Mesh == null)
+            if (renderer.Mesh == null)
             {
                 Debugging.Message("no thumbnail generated for null mesh " + building.prefab.name);
                 return;
@@ -69,22 +197,22 @@ namespace PloppableRICO
             {
                 Color originalColor = building.prefab.m_material.color;
                 building.prefab.m_material.color = building.prefab.m_color0;
-                thumbnailRenderer.Render(true);
+                renderer.Render(true);
                 building.prefab.m_material.color = originalColor;
             }
             else
             {
                 // No temporary colour change needed.
-                thumbnailRenderer.Render(true);
+                renderer.Render(true);
             }
 
             // Back up game's current active texture.
             RenderTexture gameActiveTexture = RenderTexture.active;
 
             // Convert the render to a 2D texture.
-            Texture2D thumbnailTexture = new Texture2D(thumbnailRenderer.Texture.width, thumbnailRenderer.Texture.height);
-            RenderTexture.active = thumbnailRenderer.Texture;
-            thumbnailTexture.ReadPixels(new Rect(0f, 0f, (float)thumbnailRenderer.Texture.width, (float)thumbnailRenderer.Texture.height), 0, 0);
+            Texture2D thumbnailTexture = new Texture2D(renderer.Texture.width, renderer.Texture.height);
+            RenderTexture.active = renderer.Texture;
+            thumbnailTexture.ReadPixels(new Rect(0f, 0f, (float)renderer.Texture.width, (float)renderer.Texture.height), 0, 0);
             thumbnailTexture.Apply();
 
             // Temporary texture for resizing render to thumbnail size (109 x 100).
@@ -132,7 +260,7 @@ namespace PloppableRICO
         /// </summary>
         /// <param name="baseTexture">Base texture of the thumbnail</param>
         /// <returns>2d variant icon textures</returns>
-        private static Texture2D[] GenerateThumbnailVariants(Texture2D baseTexture)
+        private Texture2D[] GenerateThumbnailVariants(Texture2D baseTexture)
         {
             var variantPixels = new Color32[baseTexture.width * baseTexture.height];
             var basePixels = baseTexture.GetPixels32();
@@ -180,7 +308,7 @@ namespace PloppableRICO
         /// <param name="filterG">Green component of filter</param>
         /// <param name="filterB">Blue component of filter</param>
         /// <param name="filterStrength">Each channel (RGB) of the original colour is bitshifted right this number before filtering (to reduce its intensity)</param>
-        private static void ColorFilter(Color32[] sourceColor, Color32[] resultColor, byte filterR, byte filterG, byte filterB , byte filterStrength)
+        private void ColorFilter(Color32[] sourceColor, Color32[] resultColor, byte filterR, byte filterG, byte filterB , byte filterStrength)
         {
             for (int i = 0; i < sourceColor.Length; i++)
             {
@@ -198,7 +326,7 @@ namespace PloppableRICO
         /// </summary>
         /// <param name="atlas">Atlas to add to</param>
         /// <param name="newTextures">Textures to add</param>
-        private static void AddTexturesToAtlas(UITextureAtlas atlas, Texture2D[] newTextures)
+        private void AddTexturesToAtlas(UITextureAtlas atlas, Texture2D[] newTextures)
         {
             Texture2D[] textures = new Texture2D[atlas.count + newTextures.Length];
 
